# Percy

./: .gitignore  Dockerfile-letta  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
percy/: metadata_store.py  utils.py
percy/client/: client.py
percy/client/model/: characters.py
percy/loader/: loader.py
percy/resources/characters/valorant/agents/: brimstone.json
percy/schemas/: characters.py
percy/server/: app.py  server.py  startup.sh
tests/: test_characters_crud.py  test_loader.py
